styles/_filter.scss
.filter-generic {
  display: inline-block;
  width: 100%;

  &__top {
    width: 100%;
    margin-bottom: 15px;

    h5 {
      font-size: $tp-lg;
      @include theme-aware('color', 'input-number-color');
      margin: 0;
      text-transform: capitalize;
      display: flex;
      align-items: center;
    }
  }

  ul {
    display: flex;
    flex-direction: column;
    list-style: none;
    margin: 0;
    padding: 0;

    li {
      display: flex;
      position: relative;
      width: 100%;
      line-height: 24px;
      margin-bottom: 12px;
      @include theme-aware('color', 'color-label');

      .checkbox-label {
        margin-right: 8px;
      }
    }
  }

  .filter-minmax {
    .filter-line {
      @include theme-aware('color', 'input-number-color');
      display: flex;
      justify-content: space-between;
      width: 100%;
      line-height: 30px;
    }

    span {
      @include theme-aware('color', 'input-number-color');
    }

    input[type='number'] {
      @include theme-aware('background-color', 'input-number-bg');
      @include theme-aware('color', 'input-number-color');
      height: 28px;
      width: 80%;
      border-radius: $brd-rds-tn;
      border: 0px;
      margin-bottom: 10px;
      padding: 4px 8px;
      transition: all 0.3s ease-in-out;

      &:focus {
        @include theme-aware('outline-color', 'color-label');
        outline-width: 1px;
      }
    }

    input[type=number]::-webkit-inner-spin-button,
    input[type=number]::-webkit-outer-spin-button {
      opacity: 0;
    }

  }
}

// Checkboxes
.checkbox-label {
  display: inline-block;
  cursor: pointer;
  font-size: 22px;
  line-height: 24px;
  height: 24px;
  width: 24px;
}

.checkbox-label input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
}

.checkbox-label .checkbox-custom {
  position: absolute;
  top: 0px;
  left: 0px;
  height: 24px;
  width: 24px;
  @include theme-aware('background-color', 'input-number-bg');
  border-radius: $brd-rds-tn;
  transition: all 0.3s ease-out;
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
  -ms-transition: all 0.3s ease-out;
  -o-transition: all 0.3s ease-out;
  @include theme-aware('border-color', 'color-label');
}

.checkbox-label input:checked~.checkbox-custom {
  @include theme-aware('background-color', 'checkbox-checked-bg');
  border-radius: $brd-rds-tn;
  -webkit-transform: rotate(0deg) scale(1);
  -ms-transform: rotate(0deg) scale(1);
  transform: rotate(0deg) scale(1);
  opacity: 1;
  border: 2px solid;
  border-color: transparent;
}

.checkbox-label .checkbox-custom::after {
  position: absolute;
  content: '';
  left: 12px;
  top: 12px;
  height: 0px;
  width: 0px;
  border-radius: 5px;
  border: solid;
  @include theme-aware('border-color', 'color-label');
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(0deg) scale(0);
  -ms-transform: rotate(0deg) scale(0);
  transform: rotate(0deg) scale(0);
  opacity: 1;
  transition: all 0.3s ease-out;
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
  -ms-transition: all 0.3s ease-out;
  -o-transition: all 0.3s ease-out;
}

.checkbox-label input:checked~.checkbox-custom::after {
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
  opacity: 1;
  left: 5px;
  top: 1px;
  width: 6px;
  height: 12px;
  border: solid;
  @include theme-aware('border-color', 'color-label');
  border-width: 0 4px 4px 0;
  background-color: transparent;
  border-radius: 0;
}

/* For Ripple Effect */
.checkbox-label .checkbox-custom::before {
  position: absolute;
  content: '';
  left: 10px;
  top: 10px;
  width: 0px;
  height: 0px;
  border-radius: 5px;
  border: 2px solid;
  @include theme-aware('border-color', 'color-label');
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  pointer-events: none;
}

.checkbox-label input:checked~.checkbox-custom::before {
  left: -3px;
  top: -3px;
  width: 24px;
  height: 24px;
  border-radius: 5px;
  -webkit-transform: scale(3);
  -ms-transform: scale(3);
  transform: scale(3);
  opacity: 0;
  z-index: 999;
  transition: all 0.3s ease-out;
  -webkit-transition: all 0.3s ease-out;
  -moz-transition: all 0.3s ease-out;
  -ms-transition: all 0.3s ease-out;
  -o-transition: all 0.3s ease-out;
  pointer-events: none;
}

